5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1708_3069.log
== TEST (2019-04-29 14:41:29) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(d>=1 or d<=8):
	if -10 + (n1>=2 or n2<=16):
		print("FURIA", n1, n2)
	elif -6 + (n1>=2 or n2<=16):
		print("GRITO", n1, n2)
	elif (n1+n2)**2:
		print("TOQUE", n1, n2)
	
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(d>=1 or d<=8):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:14) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(d>=1 or d<=8):
	if -10 + (n1>=2 or n2<=16):
		print("FURIA", n1, n2)
	elif -6 + (n1>=2 or n2<=16):
		print("GRITO", n1, n2)
	elif (n1+n2)**2:
		print("TOQUE", n1, n2)
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(d>=1 or d<=8):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:44:15) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(d>=1 or d<=8):
	if -10 + (n1>=2 or n2<=16):
		print("FURIA", n1, n2)
	elif -6 + (n1>=2 or n2<=16):
		print("GRITO", n1, n2)
	elif (n1+n2)**2:
		print("TOQUE", n1, n2)
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- EXECUTION TIME:
0.197622
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3069/main.py", line 4, in <module>
    if(d>=1 or d<=8):
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:39) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(d>=1 or d<=8):
	if -10 + (n1>=2 or n2<=16)*d*2:
		print("FURIA", n1, n2, d)
	elif -6 + (n1>=2 or n2<=16)*d*2:
		print("GRITO", n1, n2, d)
	elif ((n1+n2)**2)*d*2:
		print("TOQUE", n1, n2, d)
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(d>=1 or d<=8):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:52) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(n1>=1 or n2<=8):
	if -10 + (n1>=2 or n2<=16):
		print("FURIA", n1, n2, )
	elif -6 + (n1>=2 or n2<=16):
		print("GRITO", n1, n2, )
	elif ((n1+n2)**2)*d*2:
		print("TOQUE", n1, n2, )
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- OUTPUT:
FURIA 5.0 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:46:54) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(n1>=1 or n2<=8):
	if -10 + (n1>=2 or n2<=16):
		print("FURIA", n1, n2, )
	elif -6 + (n1>=2 or n2<=16):
		print("GRITO", n1, n2, )
	elif ((n1+n2)**2)*d*2:
		print("TOQUE", n1, n2, )
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- EXECUTION TIME:
0.193117
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
FURIA 5.0 5.0
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
FURIA 6.0 1.0
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
FURIA 6.0 1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:54) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(n1>=1 or n2<=8):
	if -10 + (n1>=2 or n2<=16):
		print("FURIA", n1, n2, )
	elif -6 + (n1>=2 or n2<=16):
		print("GRITO", n1, n2, )
	elif ((n1+n2)**2)*d*2:
		print("TOQUE", n1, n2, )
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- OUTPUT:
FURIA 5.0 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:26) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(n1>=1 or n2<=8):
	if d = (n1>=2 or n2<=16):
		z = -10 - d
	print("FURIA", z)
	elif d = (n1>=2 or n2<=16):
		z = -6 - d
	print("GRITO", z)
	else:
		print("TOQUE", n1, n2, )
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- ERROR:
File "XXXX", line 5
    if d = (n1>=2 or n2<=16):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:27) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(n1>=1 or n2<=8):
	if d = (n1>=2 or n2<=16):
		z = -10 - d
	print("FURIA", z)
	elif d = (n1>=2 or n2<=16):
		z = -6 - d
	print("GRITO", z)
	else:
		print("TOQUE", n1, n2, )
	else:
		print("Entrada invalida")
		
	
		
	
		
		
		

-- EXECUTION TIME:
0.159279
-- ERROR:
  File "/home/codebench/codes/1708/3069/main.py", line 5
    if d = (n1>=2 or n2<=16):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:56) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(n1>=1 or n2<=8):
	if d = (n1>=2 or n2<=16):
		z = -10 - d
	print("FURIA", z)
	elif d = (n1>=2 or n2<=16):
		z = -6 - d
	print("GRITO", z)
	else:
		print("TOQUE")
else:
		
		print("Entrada invalida")
		
	
		
	
		
		
		

-- ERROR:
File "XXXX", line 5
    if d = (n1>=2 or n2<=16):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:57) 
-- CODE:
n = input("FURIA/GRITO/TOQUE?")
n1 = float(input("Primeiro valor:"))
n2 = float(input("Segundo valor"))
if(n1>=1 or n2<=8):
	if d = (n1>=2 or n2<=16):
		z = -10 - d
	print("FURIA", z)
	elif d = (n1>=2 or n2<=16):
		z = -6 - d
	print("GRITO", z)
	else:
		print("TOQUE")
else:
		
		print("Entrada invalida")
		
	
		
	
		
		
		

-- EXECUTION TIME:
0.135788
-- ERROR:
  File "/home/codebench/codes/1708/3069/main.py", line 5
    if d = (n1>=2 or n2<=16):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
